updated environment variables

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,7 @@
     <title>NSS-Election</title>
     
 <link nonce="__NONCE__" rel="stylesheet" href="styles.css">
+</script>
 </head>
 <body>
   <div class="main-wrapper">
