Added routing to client

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,9 +17,9 @@
     <button id="login-btn">Proceed To Vote</button>
     <p id="login-message"></p>
     <!-- ADMIN ACCESS BUTTON -->
-    <div id="admin-access">
+    <!-- <div id="admin-access">
       <button id="admin-access-btn">View Results (Admin)</button>
-    </div>
+    </div> -->
   </div>
   <!-- VOTING DASHBOARD (Loaded Dynamically) -->
   <div id="voting-pages">
@@ -63,6 +63,6 @@
   </div>
 
 
-  <script nonce="__NONCE__" src="script.js"></script>
+  <script nonce="__NONCE__" type="module" src="script.js"></script>
 </body>
 </html>
