Added NSS logo and changed Admin login route

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,8 @@
   <div class="main-wrapper">
       <!-- Login Page -->
 <div id="login-page">
-    <h2>NSS ELECTION</h2>
+    <span class="nss-logo-wrapper"><img width="100%" src="./image/NSS-Logo.png" alt="NSS Logo"></span>
+    <div class="p-heading"><span class="ph-red">N</span><span class="ph-yellow">S</span><span class="ph-green">S</span> ELECTION GOMOA WEST</div>
     <div id="countdown-container">
       <h2 id="countdown-label" >Election Countdown</h2>
       
@@ -41,7 +42,7 @@
     <p id="login-message"></p>
     <!-- ADMIN ACCESS BUTTON -->
     <!-- <div id="admin-access">
-      <button id="admin-access-btn">View Results (Admin)</button>
+      <button id="admin-access-btn">View Results</button>
     </div> -->
   </div>
   <!-- VOTING DASHBOARD (Loaded Dynamically) -->
