feat: added fuction for Voter or Public to result after election

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -41,9 +41,9 @@
     <button id="login-btn">Proceed To Vote</button>
     <p id="login-message"></p>
     <!-- ADMIN ACCESS BUTTON -->
-    <!-- <div id="admin-access">
+    <div id="admin-access">
       <button id="admin-access-btn">View Results</button>
-    </div> -->
+    </div>
   </div>
   <!-- VOTING DASHBOARD (Loaded Dynamically) -->
   <div id="voting-pages">
