Added socket.io connection logics and ui rendering on new data

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -89,5 +89,7 @@
 
   <script nonce="__NONCE__" type="module" src="script.js"></script>
   <script nonce="__NONCE__" type="module" src="startElectionCountdown.js"></script>
+  <script nonce="__NONCE__" type="module" src="/js/lib/socket.io.min.js"></script>
+  <script nonce="__NONCE__" type="module" src="ws.js"></script>
 </body>
 </html>
