changed name to auwtu ... andwrapiing to deploy for awutu

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,7 +16,7 @@
         /></span>
         <div class="p-heading">
           <span class="ph-red">N</span><span class="ph-yellow">S</span
-          ><span class="ph-green">S</span> ELECTION GOMOA WEST
+          ><span class="ph-green">S</span> ELECTION AWUTU SENYA EAST
         </div>
         <div id="countdown-container">
           <h2 id="countdown-label">Election Countdown</h2>
