remove client socket

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -126,11 +126,11 @@
       type="module"
       src="startElectionCountdown.js"
     ></script>
-    <script
+    <!-- <script
       nonce="__NONCE__"
       type="module"
       src="/js/lib/socket.io.min.js"
-    ></script>
-    <script nonce="__NONCE__" type="module" src="ws.js"></script>
+    ></script> -->
+    <!-- <script nonce="__NONCE__" type="module" src="ws.js"></script> -->
   </body>
 </html>
