Added preloading to public images asserts

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
       <!-- Login Page -->
       <div id="login-page">
         <span class="nss-logo-wrapper"
-          ><img width="100%" src="./image/NSS-Logo.png" alt="NSS Logo"
+          ><img width="100%" src="./images/NSS-Logo.png" alt="NSS Logo"
         /></span>
         <div class="p-heading">
           <span class="ph-red">N</span><span class="ph-yellow">S</span
